# python-template

./: .example.env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: create_app.py  database.py  logger.py  mailer.py  settings.py
app/background_runner/: README.md  background_runner.py  deps.py  dramatiq_background_runner.py  fastapi_background_runner.py  rq_background_runner.py
app/book/: models.py  routes.py  schemas.py
app/storage/: deps.py  file_system_storage.py  in_memory_storage.py  storage.py
docker/act/: Dockerfile  docker-compose.yml
migrations/: env.py  script.py.mako
migrations/versions/: 14fe606270ff_create_book_table.py
tests/: book_test.py  conftest.py
tests/fixtures/: client_fixture.py
tests/integrations/: storage_test.py
tests/integrations/background_runner/: background_runner_context.py  background_runner_test.py  conftest.py  dramatiq.py  fastapi_background_tasks.py  rq.py
