[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "===3.14.0"
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.1",
    "asgi-lifespan==2.*",
    "fastapi[standard]>=0.121.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "pytest-asyncio>=1.3.0",
]

[tool.poe.tasks]
dev = "fastapi dev"
lint = "ruff check --no-fix"
lint-fix = "ruff check --fix"
format = "ruff format --check"
format-fix = "ruff format"
typecheck = "mypy ."
test = "pytest ."
migrate-apply = "alembic upgrade head"

[tool.poe.tasks.code-quality]
help = "Ensures code meets the project's standards"
sequence = ["format", "lint", "typecheck"]

[tool.poe.tasks.code-quality-fix]
help = "Fixes code to meet the project's standards"
sequence = ["format-fix", "lint-fix", "typecheck"]

[tool.poe.tasks.migrate-create]
help = "Create a new database migration"
cmd = "alembic revision --autogenerate"

[tool.ruff.lint]
extend-select = ["I", "UP", "T20"]
ignore = [
  "F841",  # remove unused variables
  "UP040", # new type alias syntax not supported by mypy yet
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = [
  "F401", # remove unused import
]
"scripts/*" = ["T20"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
skip_cache_mtime_checks = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
