[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.1",
    "asgi-lifespan==2.*",
    "dramatiq[redis,watch]>=2.0.1",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rq>=2.6.1",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "poethepoet>=0.40.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pytest-asyncio>=1.3.0",
    "fakeredis>=2.33.0",
]

[tool.poe.tasks]
dev = "fastapi dev"
lint = "ruff check --no-fix"
lint-fix = "ruff check --fix"
format = "ruff format --check"
format-fix = "ruff format"
typecheck = "mypy ."
test = "pytest ."
migrate-apply = "alembic upgrade head"
ci-test-push = "docker compose -f ./docker/act/docker-compose.yml run --rm act push -P ubuntu-latest=catthehacker/ubuntu:act-latest"

[tool.poe.tasks.code-quality]
help = "Ensures code meets the project's standards"
sequence = ["format", "lint", "typecheck"]

[tool.poe.tasks.code-quality-fix]
help = "Fixes code to meet the project's standards"
sequence = ["format-fix", "lint-fix", "typecheck"]

[tool.poe.tasks.migrate-create]
help = "Create a new database migration"
cmd = "alembic revision --autogenerate"

[tool.ruff.lint]
extend-select = ["I", "UP", "T20"]
ignore = [
  "F841",  # remove unused variables
  "UP040", # new type alias syntax not supported by mypy yet
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = [
  "F401", # remove unused import
]
"scripts/*" = ["T20"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
skip_cache_mtime_checks = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
